--- a/grant-management-server/package.json
+++ b/grant-management-server/package.json
@@ -11,6 +11,15 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "jose": "^5.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.19.1"
-  }
+  },
+  "type": "module"
 }
