--- a/grant-management-server/package.json
+++ b/grant-management-server/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -18,8 +19,10 @@
     "express": "^4.21.0",
     "jose": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
-    "prisma": "^5.19.1"
+    "prisma": "^5.19.1",
+    "uuid": "^10.0.0"
   },
   "type": "module"
 }
