--- a/grant-management-app/package.json
+++ b/grant-management-app/package.json
@@ -18,14 +18,17 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.12",
+    "moment": "^2.30.1",
     "mui-tel-input": "^6.0.1",
     "next": "14.2.12",
     "prop-types": "^15.8.1",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.8.0",
     "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
