--- a/grant-management-server/package.json
+++ b/grant-management-server/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jose": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   },
   "type": "module",
