--- a/grant-management-app/package.json
+++ b/grant-management-app/package.json
@@ -12,9 +12,10 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.1",
     "@mui/x-date-pickers": "^7.11.1",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.12",
@@ -24,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
