--- a/grant-management-app/package.json
+++ b/grant-management-app/package.json
@@ -35,8 +35,6 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.12",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "eslint-config-next": "14.2.12"
   }
 }
