--- a/grant-management-server/package.json
+++ b/grant-management-server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "prisma migrate deploy",
+    "postinstall": "npm run migrate"
   },
   "keywords": [],
   "author": "",
