--- a/grant-management-app/package.json
+++ b/grant-management-app/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-to-print": "^3.0.2",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.8.0",
     "stylis-plugin-rtl": "^2.1.1"
