--- a/grant-management-app/package.json
+++ b/grant-management-app/package.json
@@ -18,10 +18,13 @@
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.1",
     "@mui/x-date-pickers": "^7.11.1",
+    "@react-pdf/renderer": "^4.2.1",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "country-state-city": "^3.2.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "mui-tel-input": "^6.0.1",
     "next": "14.2.12",
@@ -32,10 +35,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "react-to-print": "^3.0.2",
+    "react-to-print": "^3.0.5",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.8.0",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8",
