--- a/grant-management-server/package.json
+++ b/grant-management-server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "prisma migrate deploy",
-    "postinstall": "npm run migrate"
+    "migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
