--- a/grant-management-server/package.json
+++ b/grant-management-server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
+    "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
